--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <h2 class="section-title">Contact</h2>
         <div class="social-icons">
           <a
-            href="https://github.com/MrCharlesSG"
+            href="https://github.com/danim55"
             target="_blank"
             rel="noopener noreferrer"
             class="social-icon"
@@ -119,7 +119,7 @@
             <i class="fab fa-github"></i>
           </a>
           <a
-            href="https://linkedin.com/in/carlos-serrano-gutierrez/"
+            href="https://es.linkedin.com/in/daniel-merino-cano-software-engineer-es"
             target="_blank"
             rel="noopener noreferrer"
             class="social-icon"
