--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
       <div class="container col-lg-8 col-10">
-        <a class="navbar-brand" href="#home">CSG</a>
+        <a class="navbar-brand" href="#home">Back to Top</a>
         <button
           class="navbar-toggler"
           type="button"
